Optimization UI & Transition

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".LupaPasswordActivity"></activity>
-        <activity android:name=".UpdateAndDeleteActivity" />
-        <activity android:name=".AddUserActivity" />
+        <activity android:name=".UpdateAndDeleteActivity"
+            android:parentActivityName=".DashboardActivity"/>
+        <activity android:name=".AddUserActivity"
+            android:parentActivityName=".DashboardActivity"/>
         <activity android:name=".DashboardActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
